 - Added out typemap for vector of shared_ptr objects
 - Fix typemap bug for list of shared_ptr objects
 - Support parallel XML vector io
 - Add support for gzipped XML output
 - Use pugixml for XML output
 - Move XML SAX parser to libxml2 SAX2 interface
 - Simplify XML io
 - Change interface for variational problems, class VariationalProblem removed
 - Add solve interface: solve(a == L), solve(F == 0)
 - Add new classes Linear/NonlinearVariationalProblem
 - Add new classes Linear/NonlinearVariationalSolver
 - Ad form class aliases ResidualForm and Jacobian form in wrapper code
 - Default argument to variables in Expression are passed as kwargs in the Python interface
 - Add has_openmp as utility function in Python interface
 - Add improved error reporting using dolfin_error
 - Use Boost to compute Legendre polynolials
 - Remove ode code
 - Handle parsing of unrecognized command-line parameters
 - All const std::vector<foo>& now return a read-only NumPy array
 - Make a robust macro for generating a NumPy array from data
 - Exposing low level fem functionality to Python, by adding a Cell -> ufc::cell typemap
 - Added ufl_cell as a method to Mesh in Python interface
 - Fix memory leak in Zoltan interface
 - Remove some 'new' for arrays in favour of std::vector
 - Added cell as an optional argument to Constant
 - Prevent the use of non contiguous NumPy arrays for most typemaps
 - Point can now be used to evaluate a Function or Expression in Python
 - Fixed dimension check for Function and Expression eval in Python
 - Fix compressed VTK output for tensors in 2D
0.9.11 [2011-05-16]
 - Change license from LGPL v2.1 to LGPL v3 or later
 - Moved meshconverter to dolfin_utils
 - Add support for conversion of material markers for Gmsh meshes
 - Add support for point sources (class PointSource)
 - Rename logging --> set_log_active
 - Add parameter "clear_on_write" to TimeSeries
 - Add support for input/output of nested parameter sets
 - Check for dimensions in linear solvers